remove Zero-width non-joiner

--- a/lang/bn.json
+++ b/lang/bn.json
@@ -1165,7 +1165,7 @@
     "Verification email sent": "যাচাইকরণ ইমেল পাঠানো হয়েছে",
     "Verified": "যাচাই",
     "Verify Email Address": "ই-মেইল ঠিকানা যাচাই করুন",
-    "Verify this email address": "এই ই - মেইল ​​ঠিকানা যাচাই করুন",
+    "Verify this email address": "এই ই - মেইল ঠিকানা যাচাই করুন",
     "Version :version — commit [:short](:url).": "সংস্করণ :version — কমিট [:short](:url)।",
     "Via Telegram": "টেলিগ্রামের মাধ্যমে",
     "Video call": "ভিডিও কল",
