--- a/lang/da.json
+++ b/lang/da.json
@@ -93,7 +93,7 @@
     "Add a tag": "Tilføj et tag",
     "Add a task": "Tilføj en opgave",
     "Add a template": "Tilføj en skabelon",
-    "Add at least one module.": "Tilføj mindst ét ​​modul.",
+    "Add at least one module.": "Tilføj mindst ét modul.",
     "Add a type": "Tilføj en type",
     "Add a user": "Tilføj en bruger",
     "Add a vault": "Tilføj en boks",
@@ -614,7 +614,7 @@
     "Manage templates": "Administrer skabeloner",
     "Manage users": "Administrer brugere",
     "Mastodon": "Mastodont",
-    "Maybe one of these contacts?": "Måske en af ​​disse kontakter?",
+    "Maybe one of these contacts?": "Måske en af disse kontakter?",
     "mentor": "mentor",
     "Middle name": "Mellemnavn",
     "miles": "miles",
@@ -1096,7 +1096,7 @@
     "Title": "Titel",
     "to": "til",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "For at afslutte aktiveringen af to-faktor-godkendelse skal du scanne følgende QR-kode ved hjælp af din telefons autentificeringsprogram eller indtaste opsætningsnøglen og angive den genererede OTP-kode.",
-    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "For at afslutte aktiveringen af ​​tofaktorgodkendelse skal du scanne følgende QR-kode ved hjælp af din telefons autentificeringsprogram eller indtaste opsætningsnøglen og angive den genererede OTP-kode.",
+    "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "For at afslutte aktiveringen af tofaktorgodkendelse skal du scanne følgende QR-kode ved hjælp af din telefons autentificeringsprogram eller indtaste opsætningsnøglen og angive den genererede OTP-kode.",
     "Toggle navigation": "Skift navigation",
     "To hear their story": "At høre deres historie",
     "Token Name": "Token navn",
