--- a/lang/de.json
+++ b/lang/de.json
@@ -205,7 +205,7 @@
     "A template defines how contacts should be displayed. You can have as many templates as you want - they are defined in your Account settings. However, you might want to define a default template so all your contacts in this vault have this template by default.": "Eine Vorlage definiert, wie Kontakte angezeigt werden sollen. Sie können so viele Vorlagen haben, wie Sie möchten – diese werden in Ihren Kontoeinstellungen definiert. Möglicherweise möchten Sie jedoch eine Standardvorlage definieren, damit alle Ihre Kontakte in diesem Tresor standardmäßig über diese Vorlage verfügen.",
     "A template is made of pages, and in each page, there are modules. How data is displayed is entirely up to you.": "Eine Vorlage besteht aus Seiten und auf jeder Seite gibt es Module. Wie die Daten angezeigt werden, liegt ganz bei Ihnen.",
     "Atheist": "Atheist",
-    "At which time should we send the notification, when the reminder occurs?": "Zu welchem ​​Zeitpunkt sollen wir die Benachrichtigung versenden, wenn die Erinnerung erfolgt?",
+    "At which time should we send the notification, when the reminder occurs?": "Zu welchem Zeitpunkt sollen wir die Benachrichtigung versenden, wenn die Erinnerung erfolgt?",
     "Audio-only call": "Nur-Audio-Anruf",
     "Auto saved a few seconds ago": "Vor ein paar Sekunden automatisch gespeichert",
     "Available modules:": "Verfügbare Module:",
