--- a/lang/he.json
+++ b/lang/he.json
@@ -268,7 +268,7 @@
     "Companies": "חברות",
     "Company name": "שם החברה",
     "Compared to Monica:": "בהשוואה למוניקה:",
-    "Configure how we should notify you": "הגדר כיצד עלינו להודיע ​​לך",
+    "Configure how we should notify you": "הגדר כיצד עלינו להודיע לך",
     "Confirm": "אישור",
     "Confirm Password": "אימות סיסמה",
     "Connect": "לְחַבֵּר",
