--- a/lang/ja.json
+++ b/lang/ja.json
@@ -3,7 +3,7 @@
     "(and :count more errors)": "(その他、:countエラーあり)",
     "(Help)": "（ヘルプ）",
     "+ add a contact": "+ 連絡先を追加",
-    "+ add another": "+もう一つ追加",
+    "+ add another": "+ もう一つ追加",
     "+ add another photo": "+ 別の写真を追加",
     "+ add description": "+ 説明を追加",
     "+ add distance": "+ 距離を追加",
@@ -16,13 +16,13 @@
     "+ create a group": "+ グループを作成する",
     "+ gender": "+ 性別",
     "+ last name": "+ 姓",
-    "+ maiden name": "+旧姓",
-    "+ middle name": "+ミドルネーム",
-    "+ nickname": "+ニックネーム",
-    "+ note": "+メモ",
-    "+ number of hours slept": "+睡眠時間",
+    "+ maiden name": "+ 旧姓",
+    "+ middle name": "+ ミドルネーム",
+    "+ nickname": "+ ニックネーム",
+    "+ note": "+ メモ",
+    "+ number of hours slept": "+ 睡眠時間",
     "+ prefix": "+ 接頭辞",
-    "+ pronoun": "+代名詞",
+    "+ pronoun": "+ 代名詞",
     "+ suffix": "+ サフィックス",
     ":count contact|:count contacts": ":count 連絡先",
     ":count hour slept|:count hours slept": "睡眠時間:count時間",
@@ -529,7 +529,7 @@
     "Invite someone": "誰かを招待してください",
     "I only know a number of years (an age, for example)": "何年かしか分かりません（年齢など）",
     "I only know the day and month, not the year": "日と月しか分からない、年は分からない",
-    "it misses some of the features, the most important ones being the API and gift management,": "いくつかの機能が欠けていますが、最も重要な機能は API とギフ​​ト管理です。",
+    "it misses some of the features, the most important ones being the API and gift management,": "いくつかの機能が欠けていますが、最も重要な機能は API とギフト管理です。",
     "It seems that there are no templates in the account yet. Please add at least template to your account first, then associate this template with this contact.": "アカウントにはまだテンプレートがないようです。まず少なくともテンプレートをアカウントに追加してから、このテンプレートをこの連絡先に関連付けてください。",
     "Jew": "ユダヤ人",
     "Job information": "求人情報",
