--- a/lang/nl.json
+++ b/lang/nl.json
@@ -723,7 +723,7 @@
     "Please confirm access to your account by validating your security key.": "Bevestig de toegang tot uw account door uw beveiligingssleutel te valideren.",
     "Please copy your new API token. For your security, it won't be shown again.": "Kopieer je nieuwe API-token. Voor de veiligheid zal het niet opnieuw getoond worden.",
     "Please copy your new API token. For your security, it won’t be shown again.": "Kopieer uw nieuwe API-token. Voor uw veiligheid wordt deze niet opnieuw weergegeven.",
-    "Please enter at least 3 characters to initiate a search.": "Voer minimaal 3 tekens in om een ​​zoekopdracht te starten.",
+    "Please enter at least 3 characters to initiate a search.": "Voer minimaal 3 tekens in om een zoekopdracht te starten.",
     "Please enter your password to cancel the account": "Voer uw wachtwoord in om het account te annuleren",
     "Please enter your password to confirm you would like to log out of your other browser sessions across all of your devices.": "Voer je wachtwoord in om te bevestigen dat je je wilt afmelden bij je andere browsersessies op al je apparaten.",
     "Please indicate the contacts": "Geef de contactpersonen aan",
@@ -731,8 +731,8 @@
     "Please provide the email address of the person you would like to add to this team.": "Geef het e-mailadres op van de persoon die je aan dit team wilt toevoegen.",
     "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Lees onze <link>documentatie<\/link> voor meer informatie over deze functie en tot welke variabelen u toegang heeft.",
     "Please select a page on the left to load modules.": "Selecteer een pagina aan de linkerkant om modules te laden.",
-    "Please type a few characters to create a new label.": "Typ een paar tekens om een ​​nieuw label te maken.",
-    "Please type a few characters to create a new tag.": "Typ een paar tekens om een ​​nieuwe tag te maken.",
+    "Please type a few characters to create a new label.": "Typ een paar tekens om een nieuw label te maken.",
+    "Please type a few characters to create a new tag.": "Typ een paar tekens om een nieuwe tag te maken.",
     "Please validate your email address": "Valideer uw e-mailadres",
     "Please verify your email address": "Verifieer uw email adres alstublieft",
     "Postal code": "Postcode",
@@ -858,7 +858,7 @@
     "Slices of life": "Plakjes leven",
     "Small animal": "Klein dier",
     "Social": "Sociaal",
-    "Some dates have a special type that we will use in the software to calculate an age.": "Sommige datums hebben een speciaal type dat we in de software zullen gebruiken om een ​​leeftijd te berekenen.",
+    "Some dates have a special type that we will use in the software to calculate an age.": "Sommige datums hebben een speciaal type dat we in de software zullen gebruiken om een leeftijd te berekenen.",
     "So… it works 😼": "Dus... het werkt 😼",
     "Sport": "Sport",
     "spouse": "echtgenoot",
@@ -1025,7 +1025,7 @@
     "There are no tasks yet.": "Er zijn nog geen taken.",
     "There are no templates in the account. Go to the account settings to create one.": "Er zijn geen sjablonen in het account. Ga naar de accountinstellingen om er een aan te maken.",
     "There is no activity yet.": "Er is nog geen activiteit.",
-    "There is no currencies in this account.": "Er staan ​​geen valuta’s op deze rekening.",
+    "There is no currencies in this account.": "Er staan geen valuta’s op deze rekening.",
     "The relationship has been added": "De relatie is toegevoegd",
     "The relationship has been deleted": "De relatie is verwijderd",
     "The relationship type has been created": "Het relatietype is aangemaakt",
@@ -1206,7 +1206,7 @@
     "What would make today great?": "Wat zou vandaag geweldig maken?",
     "When did the call happened?": "Wanneer vond de oproep plaats?",
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "Als tweestapsverificatie is ingeschakeld, word je tijdens de authenticatie om een veilige, willekeurige token gevraagd. Je kunt dit token ophalen uit de Google Authenticator-applicatie op je telefoon.",
-    "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Wanneer tweefactorauthenticatie is ingeschakeld, wordt u tijdens de authenticatie om een ​​veilig, willekeurig token gevraagd. U kunt dit token ophalen via de Authenticator-applicatie van uw telefoon.",
+    "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "Wanneer tweefactorauthenticatie is ingeschakeld, wordt u tijdens de authenticatie om een veilig, willekeurig token gevraagd. U kunt dit token ophalen via de Authenticator-applicatie van uw telefoon.",
     "When was the loan made?": "Wanneer is de lening verstrekt?",
     "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "Wanneer u een relatie tussen twee contactpersonen definieert, bijvoorbeeld een vader-zoonrelatie, maakt Monica twee relaties, één voor elk contact:",
     "Which email address should we send the notification to?": "Naar welk e-mailadres moeten we de melding sturen?",
