--- a/lang/pt.json
+++ b/lang/pt.json
@@ -16,8 +16,8 @@
     "+ create a group": "+ criar um grupo",
     "+ gender": "+ gênero",
     "+ last name": "+ sobrenome",
-    "+ maiden name": "+nome de solteira",
-    "+ middle name": "+nome do meio",
+    "+ maiden name": "+ nome de solteira",
+    "+ middle name": "+ nome do meio",
     "+ nickname": "+ apelido",
     "+ note": "+ nota",
     "+ number of hours slept": "+ número de horas dormidas",
@@ -143,9 +143,9 @@
     "All the gift states": "Todos os estados de presente",
     "All the group types": "Todos os tipos de grupo",
     "All the important dates": "Todas as datas importantes",
-    "All the important date types used in the vault": "Todos os tipos de datas importantes usados ​​no vault",
+    "All the important date types used in the vault": "Todos os tipos de datas importantes usados no vault",
     "All the journals": "Todos os diários",
-    "All the labels used in the vault": "Todos os rótulos usados ​​no vault",
+    "All the labels used in the vault": "Todos os rótulos usados no vault",
     "All the notes": "Todas as notas",
     "All the pet categories": "Todas as categorias de animais de estimação",
     "All the photos": "Todas as fotos",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Por favor indique os contactos",
     "Please join Monica": "Junte-se à Mônica",
     "Please provide the email address of the person you would like to add to this team.": "Por favor indique o e-mail da pessoa que gostaria de acrescentar a esta equipa",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Leia nossa <link>documentação<\/link> para saber mais sobre esse recurso e a quais variáveis ​​você tem acesso.",
+    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Leia nossa <link>documentação<\/link> para saber mais sobre esse recurso e a quais variáveis você tem acesso.",
     "Please select a page on the left to load modules.": "Selecione uma página à esquerda para carregar os módulos.",
     "Please type a few characters to create a new label.": "Digite alguns caracteres para criar um novo rótulo.",
     "Please type a few characters to create a new tag.": "Digite alguns caracteres para criar uma nova tag.",
@@ -1244,7 +1244,7 @@
     "You have been invited to join the :team team!": "Foi convidado para se juntar à equipa :team!",
     "You have enabled two factor authentication.": "Ativou a autenticação de dois fatores.",
     "You have not enabled two factor authentication.": "Não ativou a autenticação de dois fatores.",
-    "You have not setup Telegram in your environment variables yet.": "Você ainda não configurou o Telegram em suas variáveis ​​de ambiente.",
+    "You have not setup Telegram in your environment variables yet.": "Você ainda não configurou o Telegram em suas variáveis de ambiente.",
     "You haven’t received a notification in this channel yet.": "Você ainda não recebeu uma notificação neste canal.",
     "You haven’t setup Telegram yet.": "Você ainda não configurou o Telegram.",
     "You may accept this invitation by clicking the button below:": "Você pode aceitar este convite clicando no botão abaixo:",
