--- a/lang/ru.json
+++ b/lang/ru.json
@@ -163,7 +163,7 @@
     "All users in this account": "Все пользователи в этом аккаунте",
     "Already registered?": "Уже зарегистрированы?",
     "Already used on this page": "Уже использовано на этой странице",
-    "A new verification link has been sent to the email address you provided during registration.": "Новая ссылка для подтверждения была отправлена ​​на адрес электронной почты, который вы указали при регистрации.",
+    "A new verification link has been sent to the email address you provided during registration.": "Новая ссылка для подтверждения была отправлена на адрес электронной почты, который вы указали при регистрации.",
     "A new verification link has been sent to the email address you provided in your profile settings.": "На адрес электронной почты, который Вы указали в настройках своего профиля, была отправлена новая ссылка для подтверждения.",
     "A new verification link has been sent to your email address.": "На Ваш адрес электронной почты отправлена новая ссылка для подтверждения.",
     "Anniversary": "Годовщина",
