--- a/lang/tr.json
+++ b/lang/tr.json
@@ -327,7 +327,7 @@
     "Current streak": "Mevcut seri",
     "Current timezone:": "Geçerli saat dilimi:",
     "Current way of displaying contact names:": "Kişi adlarını görüntülemenin mevcut yolu:",
-    "Current way of displaying dates:": "Tarihleri ​​görüntülemenin mevcut yolu:",
+    "Current way of displaying dates:": "Tarihleri görüntülemenin mevcut yolu:",
     "Current way of displaying distances:": "Mesafeleri görüntülemenin mevcut yolu:",
     "Current way of displaying numbers:": "Sayıları görüntülemenin mevcut yolu:",
     "Customize how contacts should be displayed": "Kişilerin nasıl görüntüleneceğini özelleştirin",
@@ -338,7 +338,7 @@
     "Date of the event": "Etkinliğin tarihi",
     "Date of the event:": "Etkinlik tarihi:",
     "Date type": "Tarih türü",
-    "Date types are essential as they let you categorize dates that you add to a contact.": "Tarih türleri, bir kişiye eklediğiniz tarihleri ​​kategorilere ayırmanıza olanak tanıdığından önemlidir.",
+    "Date types are essential as they let you categorize dates that you add to a contact.": "Tarih türleri, bir kişiye eklediğiniz tarihleri kategorilere ayırmanıza olanak tanıdığından önemlidir.",
     "Day": "Gün",
     "day": "gün",
     "Deactivate": "Devre dışı bırakmak",
@@ -495,7 +495,7 @@
     "How much money was lent?": "Ne kadar para ödünç verildi?",
     "How much was lent?": "Ne kadar ödünç verildi?",
     "How often should we remind you about this date?": "Bu tarihi size ne sıklıkla hatırlatmamız gerekiyor?",
-    "How should we display dates": "Tarihleri ​​nasıl göstermeliyiz",
+    "How should we display dates": "Tarihleri nasıl göstermeliyiz",
     "How should we display distance values": "Mesafe değerlerini nasıl göstermeliyiz?",
     "How should we display numerical values": "Sayısal değerleri nasıl göstermeliyiz?",
     "I agree to the :terms and :policy": ":terms ve :policy’yi kabul ediyorum",
@@ -1233,7 +1233,7 @@
     "You can add more account to log in to our service with one click.": "Hizmetimize giriş yapmak için tek tıklamayla daha fazla hesap ekleyebilirsiniz.",
     "You can be notified through different channels: emails, a Telegram message, on Facebook. You decide.": "Farklı kanallar aracılığıyla bilgilendirilebilirsiniz: e-postalar, Telegram mesajı, Facebook. Sen karar ver.",
     "You can change that at any time.": "Bunu istediğiniz zaman değiştirebilirsiniz.",
-    "You can choose how you want Monica to display dates in the application.": "Monica’nın uygulamada tarihleri ​​nasıl görüntülemesini istediğinizi seçebilirsiniz.",
+    "You can choose how you want Monica to display dates in the application.": "Monica’nın uygulamada tarihleri nasıl görüntülemesini istediğinizi seçebilirsiniz.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Hesabınızda hangi para birimlerinin etkinleştirileceğini ve hangisinin etkinleştirilmeyeceğini seçebilirsiniz.",
     "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Kişilerin nasıl görüntülenmesi gerektiğini kendi zevkinize\/kültürünüze göre özelleştirebilirsiniz. Belki Bond James yerine James Bond’u kullanmak istersiniz. Burada dilediğiniz gibi tanımlayabilirsiniz.",
     "You can customize the criteria that let you track your mood.": "Ruh halinizi takip etmenize olanak tanıyan kriterleri özelleştirebilirsiniz.",
