--- a/lang/ur.json
+++ b/lang/ur.json
@@ -448,7 +448,7 @@
     "Friend": "دوست",
     "friend": "دوست",
     "From A to Z": "A سے Z تک",
-    "From Z to A": "Z سے ​​A تک",
+    "From Z to A": "Z سے A تک",
     "Gender": "صنف",
     "Gender and pronoun": "جنس اور ضمیر",
     "Genders": "جنس",
